chore: migrate deprecated stuff (from openrewrite)